@@ -1,3 +1,7 @@
+2007-06-06  Yvan Vanhullebus  <vanhu@netasq.com>
+	* src/racoon/handler.c: ignore obsolete lifebyte when validating
+	  reloaded configuration.
+	
 2007-05-31  Emmanuel Dreyfus <manu@netbsd.org>
 	From Joy Latten <latten@austin.ibm.com>
 	* src/racoon/{main.c|policy.h|security.c}: Fix file descriptor 
